Custom Tab を使うように変更

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-	lintOptions {
-		lintConfig file("lint.xml")
-		// abortOnError false
-	}
+    lintOptions {
+        lintConfig file("lint.xml")
+        // abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:customtabs:24.2.0'
 
     compile 'org.glassfish:javax.annotation:3.1.1-b02'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
