--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,34 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name="net.nqlab.simple.BtmwApplication" >
-        <activity
+      <activity
+          android:name="net.nqlab.simple.LoginActivity"
+          android:label="@string/title_activity_login" >
+        <intent-filter>
+          <action android:name="android.intent.action.MAIN" />
+          <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+      </activity>
+      <activity
             android:name="net.nqlab.simple.MainActivity"
             android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+      </activity>
+      <activity
+            android:name="net.nqlab.simple.ShowDownloadedActivity"
+            android:label="@string/title_activity_show_downloaded" >
+      </activity>
+      <activity
+            android:name="net.nqlab.simple.ListDownloadedActivity"
+            android:label="@string/title_activity_list_downloaded" >
+      </activity>
+      <activity
+            android:name="net.nqlab.simple.ShowOnlineActivity"
+            android:label="@string/title_activity_show_online" >
+      </activity>
+      <activity
+            android:name="net.nqlab.simple.ListOnlineActivity"
+            android:label="@string/title_activity_list_online" >
+      </activity>
     </application>
 
 </manifest>
