--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="net.nqlab.simple.BtmwApplication" >
         <activity
             android:name="net.nqlab.simple.MainActivity"
             android:label="@string/title_activity_main" >
