--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name="net.nqlab.simple.BtmwApplication" >
+        android:name="net.nqlab.simple.controller.BtmwApplication" >
       <activity
           android:name="net.nqlab.simple.controller.LoginActivity"
           android:label="@string/title_activity_login" >
@@ -19,23 +19,23 @@
         </intent-filter>
       </activity>
       <activity
-            android:name="net.nqlab.simple.MainActivity"
+            android:name="net.nqlab.simple.controller.MainActivity"
             android:label="@string/title_activity_main" >
       </activity>
       <activity
-            android:name="net.nqlab.simple.ShowDownloadedActivity"
+            android:name="net.nqlab.simple.controller.ShowDownloadedActivity"
             android:label="@string/title_activity_show_downloaded" >
       </activity>
       <activity
-            android:name="net.nqlab.simple.ListDownloadedActivity"
+            android:name="net.nqlab.simple.controller.ListDownloadedActivity"
             android:label="@string/title_activity_list_downloaded" >
       </activity>
       <activity
-            android:name="net.nqlab.simple.ShowOnlineActivity"
+            android:name="net.nqlab.simple.controller.ShowOnlineActivity"
             android:label="@string/title_activity_show_online" >
       </activity>
       <activity
-            android:name="net.nqlab.simple.ListOnlineActivity"
+            android:name="net.nqlab.simple.controller.ListOnlineActivity"
             android:label="@string/title_activity_list_online" >
       </activity>
     </application>
