--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:customtabs:24.2.0'
+    wearApp project(':BtmwWear')
 
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.glassfish:javax.annotation:3.1.1-b02'
