--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,41 +4,38 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-  <application
+    <application
+        android:name=".controller.BtmwApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="net.nqlab.simple.controller.BtmwApplication" >
-      <activity
-          android:name="net.nqlab.simple.controller.LoginActivity"
-          android:label="@string/title_activity_login" >
-        <intent-filter>
-          <action android:name="android.intent.action.MAIN" />
-          <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-      </activity>
-      <activity
-            android:name="net.nqlab.simple.controller.ShowDownloadedActivity"
-            android:label="@string/title_activity_show_downloaded" >
-      </activity>
-      <activity
-            android:name="net.nqlab.simple.controller.ListDownloadedActivity"
-            android:label="@string/title_activity_list_downloaded" >
-      </activity>
-      <activity
-            android:name="net.nqlab.simple.controller.ShowOnlineActivity"
-            android:label="@string/title_activity_show_online" >
-      </activity>
-      <activity
-            android:name="net.nqlab.simple.controller.ListOnlineActivity"
-            android:label="@string/title_activity_list_online" >
-      </activity>
-      <activity
-            android:name="net.nqlab.simple.controller.GoActivity"
-            android:label="@string/title_activity_go" >
-      </activity>
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".controller.LoginActivity"
+            android:label="@string/title_activity_login" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".controller.ShowDownloadedActivity"
+            android:label="@string/title_activity_show_downloaded" />
+        <activity
+            android:name=".controller.ListDownloadedActivity"
+            android:label="@string/title_activity_list_downloaded" />
+        <activity
+            android:name=".controller.ShowOnlineActivity"
+            android:label="@string/title_activity_show_online" />
+        <activity
+            android:name=".controller.ListOnlineActivity"
+            android:label="@string/title_activity_list_online" />
+        <activity
+            android:name=".controller.GoActivity"
+            android:label="@string/title_activity_go" />
     </application>
 
 </manifest>
