--- a/BtmwWear/build.gradle
+++ b/BtmwWear/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "net.nqlab.simple"
+        applicationId "net.nqlab.btmw"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
