--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "net.nqlab.simple"
+        applicationId "net.nqlab.btmw"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
