--- a/handheld/build.gradle
+++ b/handheld/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'io.reactivex:rxandroid:1.2.1'
 
+    compile 'com.google.android.gms:play-services:6.1.+'
+
     wearApp project(':wear')
 	compile project(':common')
 }
