--- a/handheld/build.gradle
+++ b/handheld/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -53,6 +54,9 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
 
     compile 'com.google.android.gms:play-services:6.1.+'
+
+    apt 'com.github.gfx.android.orma:orma-processor:1.0.0'
+    compile 'com.github.gfx.android.orma:orma:1.0.0'
 
     wearApp project(':wear')
 	compile project(':common')
