--- a/common/build.gradle
+++ b/common/build.gradle
@@ -25,7 +25,9 @@ android {
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.glassfish:javax.annotation:3.1.1-b02'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.1'
 }
