--- a/handheld/build.gradle
+++ b/handheld/build.gradle
@@ -53,7 +53,8 @@ dependencies {
 
     compile group: 'joda-time', name: 'joda-time', version: '2.3'
 
-    compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.google.android.gms:play-services-base:9.4.0'
+    compile 'com.google.android.gms:play-services-wearable:9.4.0'
 
     apt 'com.github.gfx.android.orma:orma-processor:1.0.0'
     compile 'com.github.gfx.android.orma:orma:1.0.0'
